--- a/database/src/main/resources/app.properties
+++ b/database/src/main/resources/app.properties
@@ -7,3 +7,6 @@ hibernate.hbm2ddl.auto=validate
 hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 hibernate.show_sql=true
 hibernate.format_sql=true
+
+app.default.locale=ru_RU
+app.default.limit=10
