--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <lombok.version>1.18.6</lombok.version>
         <mapstruct.version>1.3.0.Final</mapstruct.version>
         <spring.version>5.1.7.RELEASE</spring.version>
+        <failOnMissingWebXml>false</failOnMissingWebXml>
     </properties>
 
     <profiles>
@@ -93,26 +94,6 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.9</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-core</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-context</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-orm</artifactId>
-                <version>${spring.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-jpa</artifactId>
-                <version>2.1.8.RELEASE</version>
             </dependency>
 
             <dependency>
